--- a/style.css
+++ b/style.css
@@ -504,3 +504,145 @@ body{
 
 
 }
+
+
+/* NewsLetter */
+
+.newsletter-container{
+    background-color: var(--background-color);
+    padding: 2rem;
+    max-width: 1280px;
+    height: 38vh;
+    margin: 0 auto;
+
+
+}
+
+.newsletter-content{
+    display: flex;
+    background-color: var(--light-gray);
+    height: 100%;
+    flex-direction: row;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.news-left{
+    width: 50%;
+    height: 100%;
+    display: none;
+  
+    position: relative; 
+}
+
+.news-left img{
+    position: absolute;
+    inset: 0;
+   
+   
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+
+
+}
+
+.news-right{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    padding: 3rem;
+    align-items: flex-start;
+    width: 98%;
+}
+
+@media screen and (min-width:640px){
+    .news-left{
+        display: block;
+        width: 50%;
+    }
+
+    .newsletter-container{
+        padding: 2rem;
+    }
+
+    .news-right{
+        width: 50%;
+    }
+
+
+}
+
+.news-title{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--primary-color);
+    text-align: left;
+}
+
+.news-info{
+    padding: 0 3rem;
+}
+
+.news-description{
+    text-align: left;
+    color: #777;
+}
+
+.news-form{
+    padding: 0 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+    gap: 0.7rem;
+}
+
+.news-email{
+    background-color: var(--background-color);
+    width: 100%;
+    color: #333;
+    outline: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 0.5rem 0.75rem;
+
+}
+
+.news-email:focus{
+    border-color: #2563eb;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+}
+
+.news-button{
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    border: none;
+    border-radius: 0.25rem;
+    padding: 0.5rem 1rem;
+
+}
+
+.news-button:hover{
+    background-color: var(--link-color);
+}
+
+.news-policy{
+    font-size: 0.6rem;
+    color: #777;
+    
+    padding: 0 3rem;
+}
+
+.news-link{
+    text-decoration: underline;
+    color: #3f83f8;
+}
+
+@media screen and (min-width:640px){
+    .news-title{
+        font-size: 2.5rem;
+    }
+
+}
